@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 00:23:44 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 00:26:26 +0800</lastBuildDate>
 
   <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演</title>
@@ -31,5 +31,11 @@
   <description>今日K-pop：Stray Kids將在日本發行第二張專輯 。Stray Kids將於11月13日在日本發行第二張完整專輯《Giant》。這八人組合於2020年3月在日本出道，發行精選輯《SKZ2020》，並已發行三張迷你專輯、兩張實體單曲和一張完整專輯。。。以下是Stray Kids在日本的音樂作品：</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 00:23:44 +0800</pubDate>
+</item><item>
+  <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演</title>
+  <link>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演.html</link>
+  <description>RIIZE成員承漢將於下月回歸SM娛樂宣布RIIZE成員承漢將於下月回歸並重新組織為七人團體該經紀公司發表了一份聲明解釋了團體最初計劃為七人組的構想以及承漢對過去一年多的爭議事件深感懺悔承漢在出道後不久就因爭議事件而暫停活動最近...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 00:26:26 +0800</pubDate>
 </item></channel>
 </rss>
