@@ -6,3 +6,4 @@ https://www.koreaherald.com/view.php?ud=20241002050512
 https://www.koreaherald.com/view.php?ud=20241007050635
 https://www.koreaherald.com/view.php?ud=20241010050640
 https://www.koreaherald.com/view.php?ud=20241003050216
+https://www.koreaherald.com/view.php?ud=20241002050661
